Time: 10 ms (23.46%) | Memory: 49.2 MB (14.79%) - LeetSync